mealie/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: mealie
  type: ClusterIP
