mealie/http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-route
  namespace: mealie
spec:
  parentRefs:
  - name: my-gateway
    namespace: default
    sectionName: web-gw
  hostnames:
  - mealie.homelab
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mealie
      port: 80
